--- a/kubernetes/mysql.yml
+++ b/kubernetes/mysql.yml
@@ -16,11 +16,11 @@ spec:
         app: mysql
     spec:
       containers:
-      - image: mysql:8.3
+      - image: mysql:8.0  # Usando uma versão válida do MySQL
         name: mysql
         envFrom:
         - secretRef:
-            name: lua
+            name: lua  # Certifique-se de que o Secret 'lua' exista
         ports:
         - name: mysql
           containerPort: 3306
